# Kokoro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  kokoro-sidecar.spec  main.py  package-lock.json  package.json  requirements.txt
characters/asuka/: personality.yaml
characters/ellen_joe/: manifest.yaml  personality.yaml
characters/firefly/: manifest.yaml  personality.yaml
characters/hiyori/: manifest.yaml  personality.yaml
characters/rei/: personality.yaml
docs/AIRIAnalyze/: computer-operation-analysis.md  live2d-analysis.md  memory-system-analysis.md  overview.md  personality-system-analysis.md  proactive-contact-analysis.md  (+2 more)
frontend/: admin.html  index.html  package-lock.json  package.json  vite.config.ts
logs/: .gitkeep
prompts/: design_doc_prompt.md  docs_consistency_audit_prompt.md  output_format.md  system.md  task_router.md  对话录入用.md
scripts/: build_sidecar.ps1  gen_sprites.py  kill_dev_processes.ps1  start_frontend_dev.js  test_ws.py
src/: __init__.py  character_defaults.py  config.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: admin.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diagnostics.rs  main.rs  sidecar.rs  tray.rs  utils.rs
src/api/: app.py  (+6 more)
tests/: test_api.py  test_character_assets.py  test_conversation_service.py  test_llm.py  test_memory.py  test_perception.py  test_personality.py  test_proactive.py  test_relationship.py  test_relationship_api.py  test_reminder.py  test_safety.py  test_session_log.py
tools/: analyze_session.py  cost_summary.py
(+267 files in other folders)
